source/parser.cpp
#include "bond/compiler/compilererror.h"
#include "bond/compiler/parsenodeutil.h"
#include "bond/compiler/parser.h"
#include "bond/compiler/tokenstream.h"
#include "bond/stl/autostack.h"
#include "bond/systems/allocator.h"

namespace Bond
{

class ParserCore
{
public:
	ParserCore(Allocator &allocator, CompilerErrorBuffer &errorBuffer, ParseNodeStore &store, TokenStream &stream):
		mAllocator(allocator),
		mErrorBuffer(errorBuffer),
		mStore(store),
		mStream(stream),
		mHasUnrecoveredError(false)
	{}

	ParserCore(const ParserCore &other) = delete;
	ParserCore &operator=(const ParserCore &other) = delete;

	TranslationUnit *Parse();

private:
	typedef AutoStack<Scope> ScopeStack;

	TranslationUnit *ParseTranslationUnit();

	void ParseIncludeDirectiveAndExternalDeclarationLists(
		IncludeDirective **includeDirectiveList,
		ListParseNode **externalDeclarationList);

	IncludeDirective *ParseIncludeDirective();
	ListParseNode *ParseExternalDeclarationList();
	ListParseNode *ParseExternalDeclaration();
	NamespaceDefinition *ParseNamespaceDefinition();
	NativeBlock *ParseNativeBlock();
	EnumDeclaration *ParseEnumDeclaration();
	Enumerator *ParseEnumerator(TypeDescriptor &typeDescriptor);
	StructDeclaration *ParseStructDeclaration();

	ListParseNode *ParseFunctionOrDeclarativeStatement(StructDeclaration *structDeclaration = nullptr);
	void ParseFunctionOrDeclarativeStatement(
		StructDeclaration *structDeclaration,
		FunctionDefinition **functionDefinition,
		DeclarativeStatement **declarativeStatement);

	Parameter *ParseParameterList();
	Parameter *ParseParameter();
	TypeDescriptor *ParseRelaxedTypeDescriptor();
	TypeDescriptor *ParseTypeDescriptor(bool isRelaxedTypeDescriptor = false);
	TypeSpecifier *ParseTypeSpecifier();
	TypeSpecifier *ParsePrimitiveTypeSpecifier();
	NamedInitializer *ParseNamedInitializerList(TypeDescriptor *typeDescriptor);
	NamedInitializer *ParseNamedInitializer(TypeDescriptor *typeDescriptor);
	Initializer *ParseInitializer();
	QualifiedIdentifier *ParseQualifiedIdentifier();
	ListParseNode *ParseStatement();
	CompoundStatement *ParseCompoundStatement();
	IfStatement *ParseIfStatement();
	SwitchStatement *ParseSwitchStatement();
	SwitchSection *ParseSwitchSection();
	SwitchLabel *ParseSwitchLabel();
	WhileStatement *ParseWhileStatement();
	WhileStatement *ParseDoWhileStatement();
	ForStatement *ParseForStatement();
	JumpStatement *ParseJumpStatement();
	ListParseNode *ParseExpressionOrDeclarativeStatement();
	ExpressionStatement *ParseExpressionStatement();
	Expression *ParseConstExpression();
	Expression *ParseExpression();
	Expression *ParseAssignmentExpression();
	Expression *ParseConditionalExpression();
	Expression *ParseLogicalOrExpression();
	Expression *ParseLogicalAndExpression();
	Expression *ParseInclusiveOrExpression();
	Expression *ParseExclusiveOrExpression();
	Expression *ParseAndExpression();
	Expression *ParseEqualityExpression();
	Expression *ParseRelationalExpression();
	Expression *ParseShiftExpression();
	Expression *ParseAdditiveExpression();
	Expression *ParseMultiplicativeExpression();
	Expression *ParseCastExpression();
	Expression *ParseUnaryExpression();
	Expression *ParsePostfixExpression();
	Expression *ParsePrimaryExpression();
	Expression *ParseArgumentList();

	void SyncToIncludeAndDeclarationTerminator();
	void ExpectDeclarationTerminator();
	void SyncToDeclarationTerminator();
	void SyncToEnumeratorDelimiter();
	void SyncToStructMemberTerminator();
	void SyncToInitializerDelimiter();
	void ExpectStatementTerminator();
	void SyncToStatementTerminator();
	void ExpectLabelTerminator();

	void Recover(const TokenTypeSet &delimiters);

	const Token *ExpectToken(Token::TokenType expectedType);
	const Token *ExpectToken(const TokenTypeSet &expectedTypes);
	void AssertNode(ParseNode *node);
	void AssertNonConstExpression(CompilerError::Type type, const Token *token);
	void AssertNonVoidType(const TypeDescriptor *typeDescriptor);
	void PushUnrecoveredError(CompilerError::Type errorType, const Token *token, const void *arg = nullptr);
	void PushError(CompilerError::Type errorType, const Token *token, const void *arg = nullptr);

	template<typename T, typename... Args>
	T *CreateNode(Args&&... args)
	{
		auto nodeHandle = mAllocator.AllocOwnedObject<T>(Bond::forward<Args>(args)...);
		T *node = nodeHandle.get();
		mStore.emplace_back(Bond::move(nodeHandle));
		return node;
	}

	Allocator &mAllocator;
	CompilerErrorBuffer &mErrorBuffer;
	ParseNodeStore &mStore;
	TokenStream &mStream;

	ScopeStack mScope;
	BoolStack mParseConstExpressions;
	BoolStack mInNativeBlock;

	bool mHasUnrecoveredError;
};


TranslationUnit *Parser::Parse(TokenCollection &collection)
{
	TokenStream stream = collection.GetTokenStream();
	return Parse(stream);
}


TranslationUnit *Parser::Parse(TokenStream &stream)
{
	ParserCore parser(mAllocator, mErrorBuffer, mStore, stream);
	return parser.Parse();
}


TranslationUnit *ParserCore::Parse()
{
	return ParseTranslationUnit();
}


// translation_unit
//   : include_directive_or_external_declaration*
TranslationUnit *ParserCore::ParseTranslationUnit()
{
	auto scopeElement = mScope.Push(SCOPE_GLOBAL);
	auto parseConstExpressionsElement = mParseConstExpressions.Push(false);
	auto inNativeBlockElement = mInNativeBlock.Push(false);
	IncludeDirective *includeDirectives = nullptr;
	ListParseNode *declarations = nullptr;
	ParseIncludeDirectiveAndExternalDeclarationLists(&includeDirectives, &declarations);
	TranslationUnit *unit = CreateNode<TranslationUnit>(includeDirectives, declarations);
	ExpectToken(Token::END);
	return unit;
}


// include_directive_or_external_declaration
//   : include_directive
//   | external_declaration
void ParserCore::ParseIncludeDirectiveAndExternalDeclarationLists(
		IncludeDirective **includeDirectiveList,
		ListParseNode **externalDeclarationList)
{
	*includeDirectiveList = nullptr;
	*externalDeclarationList = nullptr;

	ParseNodeList<IncludeDirective> includeList;
	ParseNodeList<ListParseNode> declarationList;

	while (mStream.PeekIf(BLOCK_DELIMITERS_TYPESET) == nullptr)
	{
		// Eat up superfluous semicolons.
		if (mStream.NextIf(Token::SEMICOLON) == nullptr)
		{
			ListParseNode *externalDeclaration = ParseExternalDeclaration();
			if (externalDeclaration != nullptr)
			{
				declarationList.Append(externalDeclaration);
			}
			else
			{
				IncludeDirective *includeDirective = ParseIncludeDirective();
				AssertNode(includeDirective);
				includeList.Append(includeDirective);
			}
			SyncToIncludeAndDeclarationTerminator();
		}
	}

	*includeDirectiveList = includeList.GetHead();
	*externalDeclarationList = declarationList.GetHead();
}


// include_directive
//   : INCLUDE STRING ';'
IncludeDirective *ParserCore::ParseIncludeDirective()
{
	IncludeDirective *includeDirective = nullptr;

	if (mStream.NextIf(Token::KEY_INCLUDE) != nullptr)
	{
		const Token *includePath = ExpectToken(Token::CONST_STRING);
		ExpectToken(Token::SEMICOLON);
		includeDirective = CreateNode<IncludeDirective>(includePath);
	}

	return includeDirective;
}


ListParseNode *ParserCore::ParseExternalDeclarationList()
{
	ParseNodeList<ListParseNode> declarationList;

	while (mStream.PeekIf(BLOCK_DELIMITERS_TYPESET) == nullptr)
	{
		// Eat up superfluous semicolons.
		if (mStream.NextIf(Token::SEMICOLON) == nullptr)
		{
			ListParseNode *next = ParseExternalDeclaration();
			AssertNode(next);
			SyncToDeclarationTerminator();
			declarationList.Append(next);
		}
	}

	return declarationList.GetHead();
}


// external_declaration
//   : namespace_definition
//   | native_block
//   | enum_declaration
//   | struct_declaration
//   | function_definition
//   | const_declarative_statement
ListParseNode *ParserCore::ParseExternalDeclaration()
{
	ListParseNode *declaration = nullptr;

	switch (mStream.Peek()->GetTokenType())
	{
		case Token::KEY_NAMESPACE:
			declaration = ParseNamespaceDefinition();
			break;

		case Token::KEY_NATIVE:
			declaration = ParseNativeBlock();
			break;

		case Token::KEY_ENUM:
			declaration = ParseEnumDeclaration();
			break;

		case Token::KEY_STRUCT:
			declaration = ParseStructDeclaration();
			break;

		default:
			declaration = ParseFunctionOrDeclarativeStatement();
			break;
	}

	return declaration;
}


// namespace_definition
//   : NAMESPACE IDENTIFIER '{' external_declaration* '}'
NamespaceDefinition *ParserCore::ParseNamespaceDefinition()
{
	NamespaceDefinition *space = nullptr;

	if (mStream.NextIf(Token::KEY_NAMESPACE) != nullptr)
	{
		const Token *name = ExpectToken(Token::IDENTIFIER);
		ExpectToken(Token::OBRACE);
		ListParseNode *declarations = ParseExternalDeclarationList();
		ExpectToken(Token::CBRACE);
		space = CreateNode<NamespaceDefinition>(name, declarations);
	}

	return space;
}


NativeBlock *ParserCore::ParseNativeBlock()
{
	NativeBlock *block = nullptr;
	const Token *keyword = mStream.NextIf(Token::KEY_NATIVE);

	if (keyword != nullptr)
	{
		ExpectToken(Token::OBRACE);
		auto inNativeBlockElement = mInNativeBlock.Push(true);
		ListParseNode *declarations = ParseExternalDeclarationList();
		ExpectToken(Token::CBRACE);
		block = CreateNode<NativeBlock>(keyword, declarations);
	}

	return block;
}


// enum_declaration
//   : ENUM IDENTIFIER '{' enumerator_list [',] '}' ';'
//
// enumerator_list
//   : enumerator
//   | enumerator_list ',' enumerator
EnumDeclaration *ParserCore::ParseEnumDeclaration()
{
	EnumDeclaration *enumeration = nullptr;

	if (mStream.NextIf(Token::KEY_ENUM) != nullptr)
	{
		const Token *name = ExpectToken(Token::IDENTIFIER);
		enumeration = CreateNode<EnumDeclaration>(name);
		ExpectToken(Token::OBRACE);
		ParseNodeList<Enumerator> enumeratorList;

		while (mStream.PeekIf(ENUM_DELIMITERS_TYPESET) == nullptr)
		{
			Enumerator *next = ParseEnumerator(enumeration->GetTypeDescriptor());
			AssertNode(next);
			SyncToEnumeratorDelimiter();

			// Note that the comma on the last enumerator is optional.
			if (mStream.PeekIf(ENUM_DELIMITERS_TYPESET) == nullptr)
			{
				ExpectToken(Token::COMMA);
			}

			enumeratorList.Append(next);
		}

		enumeration->SetEnumeratorList(enumeratorList.GetHead());
		ExpectToken(Token::CBRACE);
		ExpectDeclarationTerminator();
	}

	return enumeration;
}


// enumerator
//   : IDENTIFIER ['=' const_expression]
Enumerator *ParserCore::ParseEnumerator(TypeDescriptor &typeDescriptor)
{
	Enumerator *enumerator = nullptr;
	const Token *name = mStream.NextIf(Token::IDENTIFIER);

	if (name != nullptr)
	{
		Expression *value = nullptr;
		if (mStream.NextIf(Token::ASSIGN) != nullptr)
		{
			value = ParseConstExpression();
			AssertNode(value);
		}
		enumerator = CreateNode<Enumerator>(name, typeDescriptor, value);
	}

	return enumerator;
}


// struct_declaration
//   : STRUCT IDENTIFIER '{' struct_member_declaration+ '}' ';'
//
// native_struct_declaration
//   : STRUCT [ '<' CONST_UINT [ ',' CONST_UINT ] '>' ] IDENTIFIER '{' native_struct_member_declaration+ '}' ';'
//   | STRUCT '<' CONST_UINT [ ',' CONST_UINT ] '>' IDENTIFIER ';'
StructDeclaration *ParserCore::ParseStructDeclaration()
{
	StructDeclaration *declaration = nullptr;

	if (mStream.NextIf(Token::KEY_STRUCT) != nullptr)
	{
		auto scopeElement = mScope.Push(SCOPE_STRUCT_MEMBER);
		const bool isNative = mInNativeBlock.GetTop();
		const Token *name = ExpectToken(Token::IDENTIFIER);
		const Token *size = nullptr;
		const Token *alignment = nullptr;
		bool isStub = false;

		if (mStream.NextIf(Token::OP_LT) != nullptr)
		{
			size = mStream.PeekIf(MOST32_INTEGER_CONSTANTS_TYPESET);
			if (!isNative && (size != nullptr))
			{
				PushError(CompilerError::SIZE_AND_ALIGNMENT_NOT_ALLOWED, size);
			}

			ExpectToken(MOST32_INTEGER_CONSTANTS_TYPESET);

			if (mStream.NextIf(Token::COMMA))
			{
				alignment = ExpectToken(MOST32_INTEGER_CONSTANTS_TYPESET);
			}

			ExpectToken(Token::OP_GT);
			isStub = mStream.NextIf(Token::SEMICOLON) != nullptr;
		}

		declaration = CreateNode<StructDeclaration>(
			name,
			size,
			alignment,
			nullptr,
			nullptr,
			isNative ?
				(isStub ? StructDeclaration::VARIANT_NATIVE_STUB : StructDeclaration::VARIANT_NATIVE) :
				StructDeclaration::VARIANT_BOND);

		if (!isStub)
		{
			ExpectToken(Token::OBRACE);

			ParseNodeList<FunctionDefinition> memberFunctionList;
			ParseNodeList<DeclarativeStatement> memberVariableList;

			while (mStream.PeekIf(BLOCK_DELIMITERS_TYPESET) == nullptr)
			{
				// Eat up superfluous semicolons.
				if (mStream.NextIf(Token::SEMICOLON) == nullptr)
				{
					FunctionDefinition *functionDefinition = nullptr;
					DeclarativeStatement *declarativeStatement = nullptr;
					ParseFunctionOrDeclarativeStatement(declaration, &functionDefinition, &declarativeStatement);
					if (functionDefinition != nullptr)
					{
						memberFunctionList.Append(functionDefinition);
					}
					else
					{
						AssertNode(declarativeStatement);
						memberVariableList.Append(declarativeStatement);
					}
					SyncToStructMemberTerminator();
				}
			}

			declaration->SetMemberFunctionList(memberFunctionList.GetHead());
			declaration->SetMemberVariableList(memberVariableList.GetHead());
			ExpectToken(Token::CBRACE);
			ExpectDeclarationTerminator();
		}
	}

	return declaration;
}


// function_definition
//   : function_prototype compound_statement
//
// native_function_declaration
//   : function_prototype ';'
//
// function_prototype
//   : type_descriptor IDENTIFIER '(' [parameter_list] ')'
//
// const_declarative_statement
//   : declarative_statement
//   With restrictions regarding constness enforced by the semantic analyser, not the grammar of the language.
ListParseNode *ParserCore::ParseFunctionOrDeclarativeStatement(StructDeclaration *structDeclaration)
{
	FunctionDefinition *functionDefinition = nullptr;
	DeclarativeStatement *declarativeStatement = nullptr;
	ParseFunctionOrDeclarativeStatement(structDeclaration, &functionDefinition, &declarativeStatement);
	if (functionDefinition != nullptr)
	{
		return functionDefinition;
	}
	return declarativeStatement;
}


void ParserCore::ParseFunctionOrDeclarativeStatement(
	StructDeclaration *structDeclaration,
	FunctionDefinition **functionDefinition,
	DeclarativeStatement **declarativeStatement)
{
	*functionDefinition = nullptr;
	*declarativeStatement = nullptr;
	const auto streamPos = mStream.GetPosition();
	const auto storePos = mStore.size();
	TypeDescriptor *descriptor = ParseTypeDescriptor();

	// Could be a function declaration, function definition or a constant declarative statement.
	if (descriptor != nullptr)
	{
		const auto namePos = mStream.GetPosition();
		const Token *name = ExpectToken(Token::IDENTIFIER);

		if (name != nullptr)
		{
			if (mStream.NextIf(Token::OPAREN) != nullptr)
			{
				const bool isNative = mInNativeBlock.GetTop();
				Parameter *parameterList = ParseParameterList();
				ExpectToken(Token::CPAREN);
				const Token *keywordConst = mStream.NextIf(Token::KEY_CONST);
				bool isConst = keywordConst != nullptr;
				TypeDescriptor *thisTypeDescriptor = nullptr;

				if (structDeclaration != nullptr)
				{
					thisTypeDescriptor = isConst ?
						&structDeclaration->GetConstThisTypeDescriptor() :
						&structDeclaration->GetThisTypeDescriptor();
				}
				else if (isConst)
				{
					PushError(CompilerError::CONST_NON_MEMBER_FUNCTION, keywordConst, name);
					isConst = false;
				}

				if (descriptor->IsArrayType())
				{
					PushError(CompilerError::FUNCTION_RETURNS_ARRAY, name);
				}

				FunctionPrototype *prototype = CreateNode<FunctionPrototype>(name, descriptor, parameterList, isConst);
				CompoundStatement *body = nullptr;
				const Token *obrace = mStream.PeekIf(Token::OBRACE);

				if (obrace != nullptr)
				{
					auto scopeElement = mScope.Push(SCOPE_LOCAL);
					body = ParseCompoundStatement();
					if (isNative)
					{
						PushError(CompilerError::NATIVE_FUNCTION_DEFINITION, name);
					}
				}
				else
				{
					ExpectDeclarationTerminator();
					if (!isNative)
					{
						PushError(CompilerError::NON_NATIVE_FUNCTION_DECLARATION, name);
					}
				}

				*functionDefinition = CreateNode<FunctionDefinition>(prototype, body, thisTypeDescriptor, mScope.GetTop());
			}
			else
			{
				// Put the name back into the stream since ParseNamedInitializerList will consume it.
				mStream.SetPosition(namePos);
				NamedInitializer *initializerList = ParseNamedInitializerList(descriptor);
				if (initializerList != nullptr)
				{
					AssertNonVoidType(descriptor);
					if ((structDeclaration != nullptr) && (structDeclaration->IsNative()))
					{
						descriptor->SetUnaddressableLValue();
					}
					else
					{
						descriptor->SetAddressable();
					}
					*declarativeStatement = CreateNode<DeclarativeStatement>(descriptor, initializerList);
					ExpectDeclarationTerminator();
				}
			}
		}
		else
		{
			// We can't tell what this is. Undo everything and bail.
			mStream.SetPosition(streamPos);
			mStore.resize(storePos);
		}
	}
}


// parameter_list
//   : parameter
//   | parameter_list ',' parameter
Parameter *ParserCore::ParseParameterList()
{
	Parameter *head = ParseParameter();
	Parameter *current = head;

	while ((current != nullptr) && (mStream.NextIf(Token::COMMA) != nullptr))
	{
		Parameter *next = ParseParameter();
		AssertNode(next);
		current->SetNextNode(next);
		current = next;
	}

	return head;
}


// parameter
//   : type_descriptor IDENTIFIER
Parameter *ParserCore::ParseParameter()
{
	Parameter *parameter = nullptr;
	TypeDescriptor *descriptor = ParseTypeDescriptor();

	if (descriptor != nullptr)
	{
		if (descriptor->IsArrayType())
		{
			descriptor->ConvertToPointerIntrinsic();
		}
		AssertNonVoidType(descriptor);
		descriptor->SetAddressable();
		const Token *name = ExpectToken(Token::IDENTIFIER);
		parameter = CreateNode<Parameter>(name, descriptor);
	}

	return parameter;
}


// type_descriptor
//   : CONST type_specifier
//   | type_specifier [CONST]
//   | type_descriptor '*' [CONST]
//   | type_descriptor '[' [const_expression] ']'
TypeDescriptor *ParserCore::ParseRelaxedTypeDescriptor()
{
	return ParseTypeDescriptor(true);
}
TypeDescriptor *ParserCore::ParseTypeDescriptor(bool isRelaxedTypeDescriptor)
{
	TypeDescriptor *descriptor = nullptr;
	const auto pos = mStream.GetPosition();
	const bool isConst1 = mStream.NextIf(Token::KEY_CONST) != nullptr;
	TypeSpecifier *specifier = ParseTypeSpecifier();

	if (specifier != nullptr)
	{
		const Token *const2 = mStream.NextIf(Token::KEY_CONST);
		const bool isConst2 = const2 != nullptr;
		if (isConst1 && isConst2)
		{
			PushError(CompilerError::DUPLICATE_CONST, const2);
		}

		descriptor = CreateNode<TypeDescriptor>(specifier, isConst1 || isConst2);
		Expression *lengthTail = nullptr;

		const Token *token = mStream.NextIf(TYPE_DESCRIPTORS_TYPESET);
		while (token != nullptr)
		{
			// This loop gets tricky. Suppose we have the following type descriptor:
			//
			// int [1][2][3] * [4][5][6]
			//
			// We need to chain the nodes together as follows in order to get the array dimensions
			// to be consistent with C.
			//
			// 4 -> 5 -> 6 -> * -> 1 -> 2 -> 3 -> int
			//
			// Moreover, all nodes in the chain except for the head need to be designated as l-values.
			// Whether the head should be an l-value is context sensitive and is dealt with in the
			// appropriate places in the parser.
			if (token->GetTokenType() == Token::OP_STAR)
			{
				const bool isConst = mStream.NextIf(Token::KEY_CONST) != nullptr;
				descriptor->SetAddressable();
				descriptor = CreateNode<TypeDescriptor>(descriptor, isConst);
				lengthTail = nullptr;
			}
			else
			{
				Expression *length = isRelaxedTypeDescriptor ? ParseExpression() : ParseConstExpression();

				const bool lengthAbsent = length == nullptr;
				if (lengthAbsent)
				{
					length = CreateNode<EmptyExpression>();
				}

				ExpectToken(Token::CBRACKET);
				if (lengthTail == nullptr)
				{
					if (descriptor->IsVoidType())
					{
						PushError(CompilerError::ARRAY_OF_VOID, token);
					}
					descriptor->ConvertToArray(length);
				}
				else
				{
					if (lengthAbsent)
					{
						PushError(CompilerError::MULTIDIMENTIONAL_ARRAY_BOUNDS, token);
					}
					lengthTail->SetNextNode(length);
				}
				lengthTail = length;
			}
			token = mStream.NextIf(TYPE_DESCRIPTORS_TYPESET);
		}
	}
	else
	{
		mStream.SetPosition(pos);
	}

	return descriptor;
}


// type_specifier
//   : primitive_type_specifier
//   | qualified_id
TypeSpecifier *ParserCore::ParseTypeSpecifier()
{
	TypeSpecifier *specifier = ParsePrimitiveTypeSpecifier();

	if (specifier == nullptr)
	{
		QualifiedIdentifier *identifier = ParseQualifiedIdentifier();
		if (identifier != nullptr)
		{
			specifier = CreateNode<TypeSpecifier>(identifier);
		}
	}

	return specifier;
}


// primitive_type_specifier
//   : VOID
//   | BOOL
//   | CHAR
//   | UCHAR
//   | SHORT
//   | USHORT
//   | INT
//   | UINT
//   | LONG
//   | ULONG
//   | FLOAT
//   | DOUBLE
TypeSpecifier *ParserCore::ParsePrimitiveTypeSpecifier()
{
	TypeSpecifier *specifier = nullptr;
	const Token *primitiveType = mStream.NextIf(PRIMITIVE_TYPE_SPECIFIERS_TYPESET);

	if (primitiveType != nullptr)
	{
		specifier = CreateNode<TypeSpecifier>(primitiveType);
	}

	return specifier;
}


// named_initializer_list
//   : named_initializer
//   | named_initializer_list ',' named_initializer
NamedInitializer *ParserCore::ParseNamedInitializerList(TypeDescriptor *typeDescriptor)
{
	NamedInitializer *head = ParseNamedInitializer(typeDescriptor);
	NamedInitializer *current = head;

	while ((current != nullptr) && (mStream.NextIf(Token::COMMA) != nullptr))
	{
		NamedInitializer *next = ParseNamedInitializer(typeDescriptor);
		AssertNode(next);
		current->SetNextNode(next);
		current = next;
	}

	return head;
}


// named_initializer
//   : IDENTIFIER ['=' initializer]
NamedInitializer *ParserCore::ParseNamedInitializer(TypeDescriptor *typeDescriptor)
{
	NamedInitializer *namedInitializer = nullptr;
	const Token *name = mStream.NextIf(Token::IDENTIFIER);

	if (name != nullptr)
	{
		const Token *assign = mStream.NextIf(Token::ASSIGN);
		Initializer *initializer = nullptr;

		if (assign != nullptr)
		{
			initializer = ParseInitializer();
			if (mScope.GetTop() == SCOPE_STRUCT_MEMBER)
			{
				PushError(CompilerError::INITIALIZER_NOT_ALLOWED, assign);
			}
			AssertNode(initializer);
		}

		namedInitializer = CreateNode<NamedInitializer>(name, initializer, typeDescriptor, mScope.GetTop(), mInNativeBlock.GetTop());
	}

	return namedInitializer;
}


// initializer_list
//   : initializer
//   | initializer_list ',' initializer
//
// initializer
//   : assignment_expression
//   | '{' initializer_list [','] '}'
Initializer *ParserCore::ParseInitializer()
{
	Initializer *initializer = nullptr;
	const Token *openBrace = mStream.NextIf(Token::OBRACE);

	if (openBrace != nullptr)
	{
		ParseNodeList<Initializer> initializerList;

		while (mStream.PeekIf(BLOCK_DELIMITERS_TYPESET) == nullptr)
		{
			Initializer *next = ParseInitializer();
			AssertNode(next);
			SyncToInitializerDelimiter();

			// Note that the comma on the last initializer is optional.
			if (mStream.PeekIf(BLOCK_DELIMITERS_TYPESET) == nullptr)
			{
				ExpectToken(Token::COMMA);
			}

			initializerList.Append(next);
		}

		ExpectToken(Token::CBRACE);
		initializer = CreateNode<Initializer>(openBrace, initializerList.GetHead());
	}
	else
	{
		Expression *expression = ParseAssignmentExpression();
		if (expression != nullptr)
		{
			initializer = CreateNode<Initializer>(expression);
		}
	}

	return initializer;
}


// qualified_id
//   : IDENTIFIER
//   | qualified_id '::' IDENTIFIER
QualifiedIdentifier *ParserCore::ParseQualifiedIdentifier()
{
	QualifiedIdentifier *head = nullptr;
	const Token *name = mStream.NextIf(Token::IDENTIFIER);

	if (name != nullptr)
	{
		head = CreateNode<QualifiedIdentifier>(name);
		QualifiedIdentifier *current = head;

		while ((current != nullptr) && mStream.NextIf(Token::SCOPE))
		{
			name = ExpectToken(Token::IDENTIFIER);
			QualifiedIdentifier *next = CreateNode<QualifiedIdentifier>(name);
			current->SetNextNode(next);
			current = next;
		}
	}

	return head;
}


// statement
//   : compound_statement
//   | if_statement
//   | switch_statement
//   | while_statement
//   | do_statement
//   | for_statement
//   | jump_statement
//   | labeled_statement
//   | declarative_statement
//   | expression_statement
ListParseNode *ParserCore::ParseStatement()
{
	ListParseNode *statement = nullptr;

	switch (mStream.Peek()->GetTokenType())
	{
		case Token::OBRACE:
			statement = ParseCompoundStatement();
			break;

		case Token::KEY_IF:
			statement = ParseIfStatement();
			break;

		case Token::KEY_SWITCH:
			statement = ParseSwitchStatement();
			break;

		case Token::KEY_WHILE:
			statement = ParseWhileStatement();
			break;

		case Token::KEY_DO:
			statement = ParseDoWhileStatement();
			break;

		case Token::KEY_FOR:
			statement = ParseForStatement();
			break;

		case Token::KEY_BREAK:
		case Token::KEY_CONTINUE:
		case Token::KEY_RETURN:
			statement = ParseJumpStatement();
			break;

		default:
			statement = ParseExpressionOrDeclarativeStatement();
			break;
	}

	return statement;
}


// compound_statement
//   : '{' statement* '}'
CompoundStatement *ParserCore::ParseCompoundStatement()
{
	CompoundStatement *compoundStatement = nullptr;

	if (mStream.NextIf(Token::OBRACE))
	{
		ParseNodeList<ListParseNode> statementList;

		while (mStream.PeekIf(BLOCK_DELIMITERS_TYPESET) == nullptr)
		{
			ListParseNode *next = ParseStatement();
			AssertNode(next);
			SyncToStatementTerminator();
			statementList.Append(next);
		}

		ExpectToken(Token::CBRACE);
		compoundStatement = CreateNode<CompoundStatement>(statementList.GetHead());
	}

	return compoundStatement;
}


// if_statement
//   : IF '(' expression ')' statement [ELSE statement]
IfStatement *ParserCore::ParseIfStatement()
{
	IfStatement *ifStatement = nullptr;
	const Token *keyword = mStream.NextIf(Token::KEY_IF);

	if (keyword != nullptr)
	{
		ExpectToken(Token::OPAREN);
		Expression *condition = ParseExpression();
		AssertNode(condition);
		ExpectToken(Token::CPAREN);
		ParseNode *thenStatement = ParseStatement();
		AssertNode(thenStatement);
		ParseNode *elseStatement = nullptr;

		if (mStream.NextIf(Token::KEY_ELSE))
		{
			elseStatement = ParseStatement();
			AssertNode(elseStatement);
		}
